<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="2dp" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:background="@drawable/search_bg"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/imag_des"
                android:src="@drawable/top_ic_search" />

            <EditText
                android:id="@+id/et_search_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/iv_search"
                android:layout_toRightOf="@id/iv_search"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/zhishiku_text3"
                android:imeOptions="actionSearch"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="15sp" >
            </EditText>

<!--             <ImageView -->
<!--                 android:id="@+id/iv_delete" -->
<!--                 android:layout_width="20dp" -->
<!--                 android:layout_height="20dp" -->
<!--                 android:layout_alignParentEnd="true" -->
<!--                 android:layout_alignParentRight="true" -->
<!--                 android:layout_centerVertical="true" -->
<!--                 android:layout_margin="7dp" -->
<!--                 android:contentDescription="@string/imag_des" -->
<!--                 android:src="@drawable/ic_del" /> -->
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="13dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/title_bar_color"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </ListView>

</LinearLayout>